--- a/frontend-audita/src/app/components/conceitos/conceitos.scss
+++ b/frontend-audita/src/app/components/conceitos/conceitos.scss
@@ -1,5 +1,5 @@
 // Importar estilos compartilhados de filtros
-@import '../../styles/filters';
+@use '../../styles/filters' as *;
 
 /* Header & Stats */
 .header {
