--- a/frontend-audita/src/app/components/perguntas/perguntas.scss
+++ b/frontend-audita/src/app/components/perguntas/perguntas.scss
@@ -60,7 +60,7 @@
 
 // ==================== FILTROS ====================
 // Importar estilos compartilhados de filtros
-@import '../../styles/filters';
+@use '../../styles/filters' as *;
 
 .filters-section {
   .filter-row {
