--- a/frontend-cemos/src/app/modules/app7-politica/app7-politica-conceitos/app7-politica-conceitos.html
+++ b/frontend-cemos/src/app/modules/app7-politica/app7-politica-conceitos/app7-politica-conceitos.html
@@ -1,1 +1,11 @@
-<p>app7-politica-conceitos works!</p>
+<!-- Componente reutilizável de conceitos -->
+<app-conceitos
+  [bibliografiaIds]="politicaConceitosBibliografiaIds"
+  [emptyMessage]="emptyMessage"
+  [showHeader]="true"
+  [moduleLabel]="moduleLabel"
+  [moduleEmoji]="moduleEmoji"
+  [flashcardsPath]="flashcardsPath"
+  [perguntasPath]="perguntasPath"
+  [backToBibliografiaPath]="backToBibliografiaPath">
+</app-conceitos>
